fixed space behind

--- a/_assets/css/_body.scss
+++ b/_assets/css/_body.scss
@@ -17,6 +17,5 @@ html, body {
 }
 
 .column-inner {
-  width: 80%;
-  margin: auto;
+  margin: 0 10%;
 }
